--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
         </p>
     </div>
     <div class="description-image">
-        <img src="images/families.jpg" alt="Description image">
+        <img src="/images/families.jpg" alt="Description image">
+                       
         </div>
     </div>
 </section>
