--- a/parents.html
+++ b/parents.html
@@ -216,8 +216,8 @@
         <section class="room-section">
             <h2>A SPECIAL ROOM FOR BEAUTIFUL MEMORIES</h2>
             <div class="photo-room">
-                <img src="../images/jaduong.JPG" alt="Memory photo 1">
-                <img src="../images/mum.JPG" alt="Memory photo 2">
+                <img src="./images/jaduong.JPG" alt="Memory photo 1">
+                <img src="./images/mum.JPG" alt="Memory photo 2">
             </div>
         </section>
     </div>
