--- a/grandchildren.html
+++ b/grandchildren.html
@@ -208,7 +208,7 @@
                     <div class="Henry's Sons">
                         <h3>LEON & LIAM</h3>
                         <p>Two adorable boys from our elder brother—always bringing joy wherever they go.</p>
-                        <img src="images/LEON.jpg" alt="Leon and Liam">
+                        <img src="images/liam.jpg" alt="Leon and Liam">
                     </div>
                     
                     <div class="Children">
@@ -227,7 +227,7 @@
                         <div class="Ann's Son">
                             <h3>AIDEN</h3> 
                             <p>This is Aiden—always radiating joy and laughter in every photo.</p>
-                            <img src="images/mark.jpg" alt="Aiden">   
+                            <img src="images/aiden.jpg" alt="Aiden">   
                         </div>
                     </div>
                     
@@ -247,7 +247,7 @@
                         <div class="Selline's Children">
                             <h3>STANLEY & AURELLIA</h3>
                             <p>Always full of warmth and smiles—truly ever-welcoming.</p>
-                            <img src="images/Aurellia.jpg" alt="Stanley and Aurellia">
+                            <img src="images/father.jpg" alt="Stanley and Aurellia">
                         </div>
                     </div>
                 </div>
