--- a/grandchildren.html
+++ b/grandchildren.html
@@ -322,8 +322,8 @@
                     <p>Sweet angels from Linnet's family. Hadrian holds a special place as our parents' first granddaughter.</p>
                 </div>
                 <div class="photo-pair">
-                    <img src="images/hadrian.JPG" alt="Hadrian">
-                    <img src="images/Favour.JPG" alt="Favour">
+                    <img src="images/hadrian.jpg" alt="Hadrian">
+                    <img src="images/Favour.jpg" alt="Favour">
                 </div>
             </div>
             
