--- a/grandchildren.html
+++ b/grandchildren.html
@@ -353,7 +353,7 @@
             <!-- Stanley & Aurellia -->
             <div class="family-card">
                 <div class="family-img-container">
-                    <img src="images/Aurellia.jpg" alt="Stanley and Aurellia">
+                    <img src="images/father.jpg" alt="Stanley and Aurellia">
                 </div>
                 <div class="family-info">
                     <h3>STANLEY & AURELLIA</h3>
