--- a/grandchildren.html
+++ b/grandchildren.html
@@ -307,7 +307,7 @@
             <!-- Leon & Liam -->
             <div class="family-card">
                 <div class="family-img-container">
-                    <img src="images/liam.jpg" alt="Leon and Liam">
+                    <img src="images/LEON.jpg" alt="Leon and Liam">
                 </div>
                 <div class="family-info">
                     <h3>LEON & LIAM</h3>
