--- a/index.html
+++ b/index.html
@@ -237,15 +237,15 @@
 <body>
   <header>
     <h1>THE RAJORE FAMILY</h1>
-    <nav>
-      <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
-      <ul id="nav-list">
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="parents.html">PARENTS</a></li>
-        <li><a href="children.html">CHILDREN</a></li>
-        <li><a href="grandchildren.html">GRANDCHILDREN</a></li>
-      </ul>
-    </nav>
+        <nav>
+            <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+            <ul id="nav-list">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="parents.html">PARENTS</a></li>
+                <li><a href="children.html" class="active">CHILDREN</a></li>
+                <li><a href="grandchildren.html">GRANDCHILDREN</a></li>
+            </ul>
+        </nav>
   </header>
 
   <section class="description-section">
