--- a/index.html
+++ b/index.html
@@ -69,17 +69,19 @@
     }
 
     .menu-icon {
-      display: none;
-      font-size: 30px;
-      cursor: pointer;
-      color: white;
-      position: absolute;
-      right: 20px;
-      top: 20px;
-      z-index: 101;
-    }
-
-    .description-section {
+  display: none;
+  font-size: 30px;
+  cursor: pointer;
+  color: black; /* Changed from white to black */
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  z-index: 101;
+  background-color: rgba(255, 255, 255, 0.7); /* Added light background for contrast */
+  padding: 5px 10px;
+  border-radius: 4px;
+}
+   .description-section {
       padding: 4rem 2rem;
       background: linear-gradient(rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), url('images/family-pattern.png') center/cover;
     }
