--- a/parents.html
+++ b/parents.html
@@ -54,14 +54,18 @@
 
         .menu-icon {
             display: none;
-            font-size: 30px;
-            cursor: pointer;
-            position: absolute;
-            right: 10px;
-            top: 10px;
+  font-size: 30px;
+  cursor: pointer;
+  color: black; /* Changed from white to black */
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  z-index: 101;
+  background-color: rgba(255, 255, 255, 0.7); /* Added light background for contrast */
+  padding: 5px 10px;
+  border-radius: 4px;
         }
-
-        .parents-heading {
+     .parents-heading {
             text-align: center;
             padding: 20px;
             background-color: #fdf6e3;
