--- a/grandchildren.html
+++ b/grandchildren.html
@@ -73,10 +73,16 @@
         
         .menu-icon {
             display: none;
-            font-size: 1.8rem;
-            cursor: pointer;
-            padding: 10px;
-            color: white;
+  font-size: 30px;
+  cursor: pointer;
+  color: black; /* Changed from white to black */
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  z-index: 101;
+  background-color: rgba(255, 255, 255, 0.7); /* Added light background for contrast */
+  padding: 5px 10px;
+  border-radius: 4px;
         }
         
         /* Main Content */
