--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <i class="fas fa-bars"></i>
       </div>
       <ul id="nav-list">
-        <li><a href="index.html">HOME</a></li>
+        <li><a href="index.html" class="active">HOME</a></li>
         <li><a href="parents.html">PARENTS</a></li>
         <li><a href="children.html">CHILDREN</a></li>
         <li><a href="grandchildren.html">GRANDCHILDREN</a></li>
