--- a/children.html
+++ b/children.html
@@ -223,7 +223,7 @@
                 <div class="child-card">
                     <h3>ANN</h3>
                     <p>Third born, a skilled lab technician contributing to the field of medical sciences.</p>
-                    <img src="images/nyar.JPG" alt="Ann">
+                    <img src="images/nyar.jpg" alt="Ann">
                 </div>
                 
                 <div class="child-card">
