--- a/grandchildren.html
+++ b/grandchildren.html
@@ -351,7 +351,7 @@
                     <p>Beautiful souls whose charm shines right through the picture.</p>
                 </div>
                 <div class="photo-pair">
-                    <img src="images/TA.jpg" alt="Talia">
+                    <img src="images/talia 2.jpg" alt="Talia">
                     <img src="images/Adera.jpg" alt="Adera">
                 </div>
             </div>
